fix: overflow: scroll -> auto

--- a/client/containers/DashboardSettings/PubSettings/collections.scss
+++ b/client/containers/DashboardSettings/PubSettings/collections.scss
@@ -2,7 +2,7 @@
 	.collections-wrapper {
 		margin-top: 1em;
 		max-height: 50vh;
-		overflow: scroll;
+		overflow: auto;
 		.bp3-tag {
 			margin-right: 0.5em;
 			margin-bottom: 0.5em;
